--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -6,13 +6,21 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
-
 
 # VERSIONING (TopLogging), MainWindow)
 # {0} - build number
 currentVersion=NetBeans IDE Development Version (Build {0})
+
+# core manifest
+OpenIDE-Module-Name=IDE Core
+OpenIDE-Module-Display-Category=Infrastructure
+OpenIDE-Module-Short-Description=The basic core framework of the IDE.
+OpenIDE-Module-Long-Description=\
+        This is not really a module, rather the central infrastructure \
+        that causes the IDE to exist as an application. \
+        As such, it cannot be disabled, nor upgraded without an IDE restart.
 
 # TopManager properties
 CTL_Netbeanshome_property=netbeans.home is not set.\nPlease check your NetBeans startup script.
