--- a/diff/src/org/netbeans/modules/diff/CmdlineDiffProvider.settings
+++ b/diff/src/org/netbeans/modules/diff/CmdlineDiffProvider.settings
@@ -2,7 +2,7 @@
 <!DOCTYPE settings PUBLIC "-//NetBeans//DTD Session settings 1.0//EN" "http://www.netbeans.org/dtds/sessionsettings-1_0.dtd">
 <settings version="1.0">
    <module name="org.netbeans.modules.diff/1"/>
-   <instanceof class="org.netbeans.api.diff.DiffProvider"/>
+   <instanceof class="org.netbeans.spi.diff.DiffProvider"/>
    <instanceof class="org.netbeans.modules.diff.cmdline.CmdlineDiffProvider"/>
    <instance class="org.netbeans.modules.diff.cmdline.CmdlineDiffProvider" method="createDefault"/>
 </settings>
