Let DTD generator suggests DTDDoc comments :-).

--- a/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/generator/Bundle.properties
@@ -55,6 +55,8 @@ PROP_rootElementName=Root Element:
 
 ## GenerateDTDSupport.java
 MSG_use_dtd_as_document_type?=Do you want to use generated DTD as external document type?
+#do not localize "<!---"  and "-->" strings
+FMT_DTDDoc=<!--- Put your DTDDoc comment here. -->
 
 ## SAXGeneratorFilePanel.java
 MSG_file_err_1=Valid Java class name expected.
@@ -141,3 +143,5 @@ MSG_invalid_dtd=The DTD is not in good shape. Aborting generation.
 
 MSG_sax_progress_done=SAX parser handler generation finished.
 MSG_action_failed=Action failed due to internal error!
+
+
