--- a/web.core/src/org/netbeans/modules/web/core/resources/templates/Servlet.template
+++ b/web.core/src/org/netbeans/modules/web/core/resources/templates/Servlet.template
@@ -6,6 +6,9 @@
  
 package Templates.JSP_Servlet;           
 
+import java.io.*;
+import java.net.*;
+
 import javax.servlet.*;
 import javax.servlet.http.*;
 
@@ -34,9 +37,9 @@ public class Servlet extends HttpServlet {
     * @param response servlet response
     */
     protected void processRequest(HttpServletRequest request, HttpServletResponse response)
-    throws ServletException, java.io.IOException {
+    throws ServletException, IOException {
         response.setContentType("text/html");
-        java.io.PrintWriter out = response.getWriter();
+        PrintWriter out = response.getWriter();
         /* output your page here
         out.println("<html>");
         out.println("<head>");
@@ -55,7 +58,7 @@ public class Servlet extends HttpServlet {
     * @param response servlet response
     */
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
-    throws ServletException, java.io.IOException {
+    throws ServletException, IOException {
         processRequest(request, response);
     } 
 
@@ -64,7 +67,7 @@ public class Servlet extends HttpServlet {
     * @param response servlet response
     */
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
-    throws ServletException, java.io.IOException {
+    throws ServletException, IOException {
         processRequest(request, response);
     }
 
