Settings changed, Diff wrapper change to use PropertyPanel according to discussions on nbdev.

--- a/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
@@ -9,5 +9,11 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
+DefaultDiff.displayName=Built In Diff Service
+
 MSG_ProvidersMissing=There are no diff providers registered in the system
 MSG_VisualizersMissing=There are no diff visualizers registered in the system
+
+LBL_Provider=Provider:
+
+LBL_Visualizer=Visualizer:
