BeanInfo for the default diff added, A new DiffPresenter introduced. This should be used instead of DiffWrapperPanel. It's more powerfull. Default diff can show and hide the diff services selectors.

--- a/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
@@ -17,3 +17,7 @@ MSG_VisualizersMissing=There are no diff visualizers registered in the system
 LBL_Provider=Provider:
 
 LBL_Visualizer=Visualizer:
+
+# DefaultDiffBeanInfo
+PROP_showDiffSelector=Show Diff Service Selector
+HINT_showDiffSelector=Show panel with provider and visualizer selectors.
