BeanInfos added. We can change colors of the graphical diff. Textual diff has context mode!

--- a/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
@@ -22,5 +22,19 @@ NoDifferenceInFile=No differences were found in {0}.
 GraphicalDiffVisualizer.displayName=Graphical Diff Viewer
 GraphicalDiffVisualizer.shortDescription=
 
+# GraphicalDiffVisualizerBeanInfo
+PROP_colorAdded=Color of Added Text
+HINT_colorAdded=The background color of added text
+PROP_colorMissing=Color of Removed Text
+HINT_colorMissing=The background colot of removed text
+PROP_colorChanged=Color of Changed Text
+HINT_colorChanged=The background colot of changed text
+
+# TextDiffVisualizerBeanInfo
+PROP_contextMode=Context Mode
+HINT_contextMode=
+PROP_contextNumLines=Number Of Context Lines
+HINT_contextNumLines=
+
 TextDiffVisualizer.displayName=Textual Diff Viewer
 TextDiffVisualizer.shortDescription=
