--- a/o.n.core/build.xml
+++ b/o.n.core/build.xml
@@ -46,13 +46,13 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="jars" depends="compile">
     <mkdir dir="netbeans/lib"/>
+    <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
+    <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <locjar jarfile="netbeans/lib/core.jar"
             basedir="src"
-            manifest="src/org/netbeans/core/resources/mf-initializer.txt"
+            manifest="manifest-subst.mf"
             excludesfile="../nbbuild/standard-jar-excludes.txt"
 	    compress="false">
-      <!-- XXX later (after platform_feb_2002 merge), just move this file to manifest.mf: -->
-      <exclude name="org/netbeans/core/resources/mf-initializer.txt"/>
       <locale name="ja"/>
     </locjar>
     <locjar jarfile="netbeans/lib/ext/terminalemulator.jar"
