--- a/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
@@ -133,7 +133,7 @@ PROP_backupExtensions=Files to Back Up by Extension
 HINT_backupExtensions=Extensions of files that should be backed up when modified.
 PROP_ignoredFiles=Ignored Files
 HINT_ignoredFiles=Regular expression of files to ignore. Match whole name, no path. Blank for none.
-PROP_systemName=System name of the file system.
+PROP_systemName=System name of the file system
 HINT_systemName=Should uniquely identify the file system, as it will be used during serialization of its files. 
 
 # LoaderActionsPanel
