Bug #20996 fixed Warning will be displayed after clicking OK, if editor text will contain commented line with some property.

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -368,3 +368,4 @@ CTL_UnspecifiedBrowser=<Unspecified>
 ACS_PropertiesEditorPane=Properties
 ACSD_PropertiesEditorPane=N/A
 ACSD_CustomPropertiesEditor=N/A
+MSG_PropertiesComments=Commented properties can be lost after saving this change. Continue?
