Numeric keys must be preceded with #NOI18N; see http://www.netbeans.org/i18n/. Among other things, this ensures that -J-Dorg.openide.util.NbBundle.DEBUG=true will work correctly.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -39,16 +39,22 @@ CTL_About_Detail_A11yDesc=Tabbed Pane with Detailed Product Information
 ACSD_AboutDialog=N/A
 ACSN_AboutTabs=N/A
 ACSD_AboutTabs=N/A
+#NOI18N
 SPLASH_WIDTH=520
+#NOI18N
 SPLASH_HEIGHT=316
 
 # x, y, w, h
+#NOI18N
 SplashRunningTextBounds=78, 60, 362, 20
 # RGB
+#NOI18N
 SplashRunningTextColor=0x000000
 # x, y, w, h
+#NOI18N
 AboutTextBounds=78, 60, 362, 20
 # Hexadecimal color of printing text in RGB
+#NOI18N
 AboutTextColor=0x000000
 
 #ControlPanelNode
