Improving errors handling in loading and saving forms, etc.

--- a/form/src/org/netbeans/modules/form/editors2/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/editors2/Bundle.properties
@@ -23,6 +23,26 @@ LAB_AvailableBorders_Mnemonic=B
 ACSD_AvailableBorders=N/A
 ACSD_BorderCustomEditor=N/A
 
+# message shown when main element of border data is mising in XML
+# do not translate "Border"
+MSG_ERR_MissingMainElement=Invalid format: missing \"Border\" element.
+
+# message shown when there are no data for border in XML
+MSG_ERR_MissingBorderData=Invalid format: missing border data.
+
+# formatting of message shown when there's an unknown border property
+# {0} = property name
+# {1} = border class name
+FMT_ERR_UnknownProperty=Stored property \"{0}\" not found in {1}.
+
+# formatting of message shown when reading a border property from XML failed
+# {0} = property name
+FMT_ERR_CannotReadBorderProperty=Cannot read \"{0}\" property value for the border.
+
+# formatting of message shown when reading a border property from XML failed
+# {0} = property name
+FMT_ERR_CannotReadAndSetBorderProperty=Cannot read and set \"{0}\" property value for the border.
+
   # {0} long name, {1} short name
   LAB_FMT_UnknownBorder=Unknown Border ({1})
 
