--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -37,10 +37,6 @@ CTL_FormTitle_RO=(read only)
 # name of GUI Editing workspace
 CTL_GuiEditingWorkspaceName=GUI Editing
 
-# FormDataLoaderBeanInfo
-#PROP_Name=Name
-#HINT_Name=Name of URL object.
-
 # Control Panel -> Form Objects Property Names
 PROP_WORKSPACE=Workspace
 HINT_WORKSPACE=Workspace on which forms are opened.
@@ -145,100 +141,200 @@ CTL_LayoutTabHint=Layout constraints properties
 # hint for ButtonGroupProperty
 HINT_ButtonGroup=Group of buttons in which this button belongs
 
-# formatting of a status line text shown during the opening of the form
-# {0} = name of the form data object
-FMT_OpeningForm=Opening Form: {0} ...
-
-# error notification message that will be shown when some errors/warnings occur during form loading
-ERR_BetaErrorsNotification=Some errors occurred while loading this form. See console for details.
-ERR_ErrorsNotification=Some errors occurred while loading this form.
-CTL_ErrorsNotificationTitle=Errors Loading Form
-CTL_ErrorDetailTitle=Error/Warning Details
-CTL_ErrorLogText1=Some errors occurred while loading the form.\nSee the list of errors and warnings below and click on Detail to get a detailed description of each error.
-CTL_ErrorLogText2=List of errors/warnings:
-CTL_ErrorLogText2_Mnemonic=L
-ACSD_CTL_ErrorList=N/A
-# list item for a warning
-# {0} = description of the warning
-FMT_WarningItem=WARNING: {0}
-# list item for an error
-# {0} = description of the error
-FMT_ErrorItem=ERROR: {0}
-CTL_CLOSE=Close
-ACSD_CTL_CLOSE=N/A
-CTL_DETAILS=Details
-CTL_DETAILS_Mnemonic=D
-ACSD_CTL_DETAILS=N/A
-CTL_ErrorDetail=Error Details
-CTL_ErrorDetail_Mnemonic=E
-ACSD_CTL_ErrorDetail=N/A
-ACSD_ErrorDetailDialog=N/A
-
 ERR_COMPONENT_NAME_ALREADY_IN_USE=Two components in the same form cannot have the same name.
 ERR_INVALID_COMPONENT_NAME=The name of a component must be a valid Java variable name.
 
 # user entered value that passed through Property Editor, but failed in setter method of the property
 MSG_ERR_WRITING_TO_PROPERTY=Failed to write the value to the property \"{0}\".
 
-# message that will be shown when none of registered persistence managers is capable of loading the form
-MSG_ERR_NotRecognizedForm=The form file format is not recognized.
-
-# formatting of error message shown when form base class cannot be used
-# {0} = name of the class
-FMT_ERR_FormBaseClass=Cannot create form based on {0}.\nThe class cannot be loaded or instantiated.
-
-# message shown if form type recognition fails (when loading form)
-MSG_ERR_FormType=Cannot determine form type (form superclass).
-
-# message that will be shown when loading form stored in Developer 2.X format
-MSG_ConvertForm=The form is saved in an older format. Do you want to convert the form to the new XML persistence format?\n\
-  Note: If you answer No, some new features of the form editor will not be available.
-
-# formatting of an error message that will be shown when an error occurrs
-# during loading of the form
+# formatting of a status line text shown during the opening of the form
 # {0} = name of the form data object
-FMT_ERR_LoadingForm=An error occurred while loading form: {0}.
+FMT_OpeningForm=Opening Form: {0} ...
 
-# formatting of an error message that will be shown when an error occurrs
-# during loading of the form
-# {0} = name of the form data object
-# {1} = name of the class of the exception that caused the error
-# {2} = message of the exception that caused the error
-FMT_ERR_LoadingFormDetails=An error occurred while loading form: {0}.\n[{1}] {2}
+# error notifications shown when some errors/warnings occur during form loading
+FMT_ERR_PersistenceManagerInstantiation=Cannot instantiate persistence manager:\n {0}
 
-# formatting of an error message that will be shown when an error occurrs
-# during saving of the form
-# {0} = name of the form data object
-# {1} = name of the class of the exception that caused the error
-FMT_ERR_SavingForm=An error occurred while saving form: {0} [{1}]
+# warning message when a form was loaded with errors (not all data loaded)
+MSG_FormLoadedWithErrors=Due to errors occurred during loading the form, some data could not be loaded.\n\
+It is not recommended to use this form now - some data would be lost after saving the form.\n\
+Please go through the reported errors, try to fix them, and open the form again.
 
-# formatting of an error message that will be shown when an error occurrs
-# during saving of the form
-# {0} = name of the form data object
-# {1} = name of the class of the exception that caused the error
-ERR_SavingForm=An error occurred while saving form: {0} [{1}]
+# title of the warning message above
+CTL_FormLoadedWithErrors=Warning - Form Loaded With Errors
 
+# message when there's no PersistenceManager registered for loading forms
+MSG_ERR_NoPersistenceManager=Internal error: there is no persistence manager registered.\n\
+The form cannot be opened.
 
-# unsupported character encoding
-ERR_UnsupportedEncoding=This encoding is not supported by the JDK.
+# message when no registered PersistenceManager is capable of loading the form
+MSG_ERR_NotRecognizedForm=The form file format is not recognized.\nThe form cannot be opened.
+
+# message when some errors occurred in accessing the form file
+MSG_ERR_LoadingErrors=Some errors occurred when trying to load the form file.\n\
+The form cannot be opened.
+
+# message when the form file contains invalid XML
+MSG_ERR_InvalidXML=The form file does not contain valid XML.\nThe form cannot be opened.
+
+# message when the form file does not contain expected main element
+# do not translate "Form"
+MSG_ERR_MissingMainElement=Invalid format: main \"Form\" element not found in the form file.\nThe form cannot be opened.
+
+# formatting of message when the for is of unsupported version
+# {0} = version number
+FMT_ERR_UnsupportedVersion=Unsupported form file version: {0}.\nThe form cannot be opened.
+
+# formatting of warning message when a substitute form type is used
+# {0} = the substitute type
+# {1} = folder where ide.log is placed
+FMT_FormTypeFallsBack=The form type used for design falls back to {0}.\n\
+The class specified in the java source cannot be used.\n\
+See ide.log file for details about exceptions.\n\
+The ide.log file is located in {1} folder.
+
+# formatting of message when the form cannot be based on given class
+# {0} = the invalid base class name
+FMT_ERR_InvalidBaseClass=Cannot create form based on {0}.\n\
+Please make sure the class is a JavaBean.\nThe form cannot be opened.
+
+# message when the base class of the form cannot be determined
+MSG_ERR_CannotDetermineBaseClass=Cannot determine the form type (the base class \
+of the form cannot be loaded).\nThe form cannot be opened.
+
+# message when there's a class name of component missing
+MSG_ERR_MissingClass=Invalid format: missing class name.\nThe component cannot be loaded.
+
+# formatting of message when a component class cannot be loaded
+# {0} = name of the class that cannot be loaded
+FMT_ERR_CannotLoadClass=Cannot load component class {0}.\nThe component cannot be loaded.
+
+# formatting of message when an unknow element is found in form file
+# {0} = name of the unknown element
+FMT_ERR_UnknownElement=Found unknown component element: {0}
+
+# formatting of message when a component instance cannot be created
+# {0} = name of the class which cannot be instantiated
+FMT_ERR_CannotCreateInstance=Cannot create instance of {0}.\n\
+The component cannot be loaded.
+
+# message when initialization of visual layout of loaded container failed
+MSG_ERR_LayoutInitFailed=Initialization of layout support failed.\n\
+Layout information for this container cannot be loaded.
+
+# message when no layout support found for a container
+MSG_ERR_NoLayoutSupportFound=No layout support was found.\n\
+Layout information for this container cannot be loaded.
+
+# message when there's a property name missing in form file
+MSG_ERR_MissingPropertyName=Invalid format: missing property name attribute.\n\
+The property cannot be loaded.
+
+# message when a specified property is unknown
+MSG_ERR_UnknownProperty=No such property exists in the component.
+
+# formatting of message when a property type class cannot be loaded
+# {0} = name of the class that cannot be loaded
+FMT_ERR_CannotLoadClass2=Cannot load property type class {0}.\nThe property cannot be loaded.
+
+# message when the stored property type is not compatible with the property
+MSG_ERR_IncompatiblePropertyType=Invalid format: the stored property type is incompatible.\n\
+The property cannot be loaded.
+
+# message when there's a property type missing in form file
+MSG_ERR_MissingPropertyType=Invalid format: missing property type attribute.\n\
+The property cannot be loaded.
+
+# formatting of message when a property editor class cannot be loaded
+# {0} = name of the class that cannot be loaded
+FMT_ERR_CannotLoadClass3=Cannot load property editor class {0}.\nThe property cannot be loaded.
+
+# formatting of message when a property editor instance cannot be created
+# {0} = name of the class which cannot be instantiated
+FMT_ERR_CannotCreateInstance2=Cannot create instance of property editor {0}.\n\
+The property cannot be loaded.
+
+# formatting of message when a string cannot be decoded as a primitive value
+# {0} = decoded string
+# {1) = target primitive type
+FMT_ERR_CannotDecodePrimitive=Cannot decode \"{0}\" as {1}.\nThe property cannot be loaded.
+
+# message when some error in reading property value occurs
+MSG_ERR_CannotReadPropertyValue=Cannot read the property value.
+
+# message when a property value is missing in the form file
+MSG_ERR_MissingPropertyValue=Invalid format: the property value is missing.
+
+# message when a loaded value cannot be set to property
+MSG_ERR_CannotSetLoadedValue=Cannot set the loaded value to the property.
+
+# formatting of message when trying to save to read only form file
+# {0} = name of the form file
+FMT_ERR_SaveToReadOnly=Internal error: tried to save to read-only file {0}.
+
+# formatting of message when the form file for saving could not be locked
+# {0} = name of the form file
+FMT_ERR_CannotLockFormFile=Internal error: cannot obtain lock on file {0}.
+
+# formatting of message when could not write the form file
+# {0} = name of the form file
+FMT_ERR_CannotWrtiteToFile=Cannot write to file {0}
+
+# formatting of message when a value cannot be got from property to be saved
+# {0} = name of the property
+FMT_ERR_CannotGetPropertyValue=Cannot get the value of \"{0}\" property.\n\
+The property cannot be saved.
+
+# formatting of message when a property value cannot be saved
+# {0} = name of the property
+FMT_ERR_CannotSaveProperty=Cannot save the value of \"{0}\" property.
+
+# formatting of message when a property value cannot be saved
+# {0} = class name of property editor
+FMT_ERR_CannotSaveProperty2=Cannot save property value using {0} property editor.
+
+# formatting of message when a property value cannot be saved
+# {0} = value type class name
+FMT_ERR_CannotSaveProperty3=Cannot save property value of type {0}.
+
+# formats for description labels of various loading errors
+FMT_ERR_LoadingComponent=Error in loading component:\n{0}
+FMT_ERR_LoadingComponentProperty=Error in loading component property:\n{0}
+FMT_ERR_LoadingLayout=Error in loading layout:\n{0}
+FMT_ERR_LoadingLayoutProperty=Error in loading container layout property:\n{0}
+FMT_ERR_LoadingLayoutConstraints=Error in loading layout constraints:\n{0}
+FMT_ERR_LoadingLayoutConstraintsProperty=Error in loading layout constraint property:\n{0}
+
+# string used for layout when building a location description of location in
+# the tree, e.g. [JFrame]->container1->[layout]->property1
+CTL_PathLayout=[layout]
+
+# string used for layout when building a location description of location in
+# the tree, e.g. [JFrame]->component1->[layout constraints]->property1
+CTL_PathLayoutConstraints=[layout constraints]
+
+# string used as chain link when building a location description in the tree,
+# e.g. [JFrame]->container1->component1
+CTL_PathLink=->
 
 # Printed when IOException occurs during creating component palette folder under system
 # (performed when Form module is installed for the first time)
 ERR_CreatingPalette=An error occurred while creating the Palette folder.
 
-# Printed as a warning when IOException occurs during creating component palette categories or items
-# (performed when Form module is installed for the first time)
-ERR_ProblemsCreatingPalette=\
-	Some problems occurred during Component Palette creation.\n\
-	The palette might not be complete.
-
 # formatting of Error message when a layout initialization fails
 # {0} = layout class name
-FMT_ERR_LayoutInit=Failed to initialize layout {0}.
+FMT_ERR_LayoutInit=Failed to initialize layout {0}.\nThe layout cannot be set.
 
 # formatting of error message when no LayoutSupport is found for layout
 # {0} = layout class name
-FMT_ERR_LayoutNotFound=No support class found for layout {0}.
+FMT_ERR_LayoutNotFound=No support class found for layout {0}.\nThe layout cannot be set.
+
+# message when initialization of visual layout of loaded container failed
+MSG_ERR_LayoutInitFailed2=Initialization of the container layout support failed.\n\
+Just a limited basic support will be used.
+
+# message when no layout support found for a container
+MSG_ERR_NoLayoutSupportFound2=No layout support for the container was found.\n\
+Just a limited basic support will be used.
 
 # message shows restriction of usage of Borders
 MSG_BorderNotApplicable=Cannot apply border. Borders can be used only with Swing JComponent subclasses.
@@ -286,12 +382,6 @@ FMT_ERR_ComponentLoading=Loading component {0} failed: {1} [{2}]
 # {0} = ClassNotFoundException details message
 # {1} = class name of the exception
 FMT_ERR_ClassNotFound=Class not found: {0} ({1})
-
-# formatting of Error message when a constraints loading fails
-# {0} = Exception details message
-# {1} = class name of the exception
-FMT_ERR_ConstraintsNotFound=Constraints not found: {0} ({1})
-
 
 # formatting of component node display name
 # {0} = name of the component (typically variable name)
@@ -546,10 +636,6 @@ FMT_MSG_RESIZING_FORMDESIGNER=Resizing FormDesigner to size {0}, {1}.
   FMT_LAB_JCheckBoxMenuItem=CheckBox
   FMT_LAB_JMenu=Menu
   FMT_LAB_JRadioButtonMenuItem=RadioButton
-
-# GandalfPersistenceManager
-  ERR_BadXMLFormat=The file format is invalid
-  ERR_BadXMLVersion=The form file version is not supported
 
   # Formatting of error message displayed when FormInfo class cannot be created for a form
   FMT_ERR_FormInfoNotFound=The FormInfo class was not found:\n{0}
