Bugfix of #17950 Line Number Margin property: top and bottom settings not used

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -87,6 +87,10 @@ HINT_lineHeightCorrection=Multiplier by which to adjust line height.
 PROP_lineNumberMargin=Line Number Margin
 HINT_lineNumberMargin=Determines placement of line number margin.
 
+PROP_lineNumberMargin2=Line Number Margin
+HINT_lineNumberMargin2=Determines placement of line number margin.
+
+
 PROP_lineNumberVisible=Line Numbers
 HINT_lineNumberVisible=If True, line numbers in the document are displayed along the left side of the window.
 
