--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -579,6 +579,14 @@ CTL_NOLOAD_option=-noload               do not call TopManager to auto-load modu
 EXC_MissingResourceException_class_name=Missing resource from class: {0}
 # {0} - key from MRE
 EXC_MissingResourceException_key=Key which was not found: {0}
+# {0} - public ID
+# {1] - system ID
+EXC_sax_parse=Parse error in file {1} (PUBLIC {0})
+# {0} - public ID
+# {1] - system ID
+# {2} - column #
+# {3} - line #
+EXC_sax_parse_col_line=Parse error in file {1} line {3} column {2} (PUBLIC {0})
 
 UI/Services/DebuggingAndExecuting=Debugging and Executing
 UI/Services/IDEConfiguration=IDE Configuration
