--- a/o.n.core/src/org/netbeans/core/projects/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/projects/Bundle.properties
@@ -6,7 +6,7 @@
 # http://www.sun.com/
 # 
 # The Original Code is NetBeans. The Initial Developer of the Original
-# Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+# Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
 #System File System
@@ -49,3 +49,9 @@ LBL_fstate_undefined=Setting value is not defined here
 
 #settings category containing settings declared in manifest (older modules)
 LBL_uncategorized_folder=Uncategorized
+
+# ModuleLayeredFileSystem
+MSG_start_load_cache=Loading cached installed objects of modules...
+MSG_end_load_cache=Loading cached installed objects of modules...done.
+MSG_start_rewrite_cache=Recreating cache of installed objects of modules...
+MSG_end_rewrite_cache=Recreating cache of installed objects of modules...done.
