Fix of bug #21115: XMLPropertyEditor implemented - storing/reading the table model to/from XML.

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -123,6 +123,8 @@ CTL_HINT_RemoveColumn=Remove column
 CTL_HINT_RemoveRow=Remove row
 ACSD_TableCustomEditor=N/A
 
+ERR_InvalidXMLFormat=Invalid format of table XML data
+
 #DimensionCustomEditor
 CTL_Dimension=Dimension
 CTL_Width=Width:
