Bug #19637 fixed. ACSD added to filechooser

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -362,6 +362,7 @@ CTL_Approve_Button_Title=OK
 CTL_DialogTitleFilesAndDirs=Select a File or Directory
 CTL_DialogTitleFiles=Select a File
 CTL_DialogTitleDirs=Select a Directory
+ACSD_FileEditor=N/A
 
 #HtmlBrowser$FactoryEditor
 CTL_UnspecifiedBrowser=<Unspecified>
