--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -228,7 +228,7 @@ workspaceswitcher
     <ant dir="../extbrowser/webclient" target="netbeans"/>
   </target>
   <!-- XXX illegal dependence on core! -->
-  <target name="all-form" depends="all-openide,all-openidex,all-java,all-clazz,all-core">
+  <target name="all-form" depends="all-openide,all-java,all-core">
     <echo message="Building module form..."/>
     <ant dir="../form" target="netbeans"/>
   </target>
