--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -136,6 +136,10 @@ workspaceswitcher
     <echo message="Building module core/ui..."/>
     <ant dir="../core/ui" target="netbeans"/>
   </target>
+  <target name="all-core/naming" depends="all-openide">
+    <echo message="Building module core/naming..."/>
+    <ant dir="../core/naming" target="netbeans"/>
+  </target>
   <target name="all-core/windows" depends="all-openide">
     <echo message="Building module core/windows..."/>
     <ant dir="../core/windows" target="netbeans"/>
