Buttons are localized, scroll bars are connected with the third scroll pane.

--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -15,3 +15,8 @@ MergePanel.nextButton.mnemonic=N
 MergePanel.prevButton.toolTipText=Previous Difference
 MergePanel.prevButton.mnemonic=P
 
+
+MergePanel.acceptLeftButton.text=Accept
+MergePanel.acceptAndNextLeftButton=Accept & Next
+MergePanel.acceptRightButton.text=Accept
+MergePanel.acceptAndNextRightButton=Accept & Next
