--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
@@ -36,13 +36,12 @@ ACSN_CatalogMounterPanel=Entity catalog mounter
 ## CatalogRootNode.java
 TEXT_catalog_root=XML Entity Catalogs
 #it is HTML tooltip
-PROP_catalog_root_desc=<html><h3>XML Infractructure Entity Catalog.</h3>\
-<p>You can <b>mount</b> external catalog\
-files in several formats:\
-<ul><li>TR9401 (SOCAT) standard\
-<li>OASIS XML Catalog standard\
-<li>other custom formats.\
-</ul></p></html>
+PROP_catalog_root_desc=<html><h3>XML Infrastructure Entity Catalog.</h3> \
+        <p>You can <b>mount</b> external catalog files in several formats: <ul> \
+        <li>TR9401 (SOCAT) standard</li> \
+        <li>OASIS XML Catalog standard</li> \
+        <li>other custom formats.</li> \
+        </ul></p></html>
 PROP_Mount_Catalog=Mount Catalog
 LBL_mount=Mount Catalog...
 
