--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
@@ -11,11 +11,12 @@
 
 
 ## SystemCatalogCustomizer.java
-SystemCatalogCustomizer.readOnly.text=This is the Netbeans IDE system catalog. \u000AUsers have read-only access. It can be manipulated only by modules.
-ACSD_SystemCatalogCustomizer=Customizer for Netbeans IDE catalog
+SystemCatalogCustomizer.readOnly.text=This is the NetBeans IDE system catalog.\n\
+        Users have read-only access. It can be manipulated only by modules.
+ACSD_SystemCatalogCustomizer=Customizer for NetBeans IDE catalog
 
 ## SystemCatalogReaderBeanInfo.java
-NAME_system_catalog=Netbeans Catalog
+NAME_system_catalog=NetBeans Catalog
 TEXT_system_catalog_desc=Read-only IDE system catalog (useful for IDE module development).
 
 ## XCatalog.java
