bugfix #20244 change of a message Show on Startup (form positive to negative)

--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -11,8 +11,8 @@
 
 CTL_DID_YOU_KNOW=Did you know?
 CTL_OpeningBrowser=Opening browser ...
-CTL_NEXTSTARTUP=\ Show Welcome Screen on Startup
-MNE_NEXTSTARTUP=S
+CTL_NEXTSTARTUP=\ Do not show Welcome Sreen again
+MNE_NEXTSTARTUP=D
 CTL_START_TITLE=Welcome to NetBeans
 CTL_NEXT_BUTTON=Next Tip
 MNE_NEXT_BUTTON=N
