#21284 BeanInfos revisited and i18n.

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
@@ -26,6 +26,12 @@ PROP_display_name=XML Catalog at {0}
 ## XCatalogBeanInfo.java
 NAME_x_catalog=XML Catalog
 TEXT_x_catalog_desc=Multiversion support of XCatalog v0.2 and XMLCatalog v0.4.
+PROP_xcatalog_name=Catalog Name
+PROP_xcatalog_name_desc=Name helps to identify catalog.
+PROP_xcatalog_info=Catalog Info
+PROP_xcatalog_info_desc=Describes actual catalog state.
+PROP_xcatalog_location=Catalog URL
+PROP_xcatalog_location_desc=URL points to catalog source.
 
 ## XCatalogCustomizer.java
 ACSD_XCatalogCustomizer=Customizer for XML Catalog reader. Recognized catalog formats are XCatalog v0.2 and XMLCatalog v0.4. Both are superseded by OASIS XML Catalog format.
