--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -31,6 +31,7 @@ HINT_pp=Prefer public mappings over system mappings.
 
 #{0} is a catalog location
 TITLE_catalog=Resolver at {0}
+MSG_prepared=Ready to load catalog at {0}.
 
 #{0} exception message
 DESC_error_loading=Error: {0}
@@ -39,5 +40,9 @@ DESC_loaded=Sucessfully loaded and active.
 ## CatalogBeanInfo.java
 PROP_Catalog=Sun's Resolver 1.1
 PROP_Catalog_desc=Implements OASIS XML Catalog and TR9401 standards.
+PROP_catalog_name=Catalog Name
+PROP_catalog_name_desc=Name helps to identify catalog.
+PROP_catalog_info=Catalog Info
+PROP_catalog_info_desc=Describes actual catalog state.
 
 #\u000A## Catalog.java\u000A\u000A#{0} is a catalog location
